[project]
name = "scholar-search"
version = "0.0.7"
license = {file = "LICENSE"}
description = "a macro search bar"
authors = [
    {name = "Adam Miller", email = "miller@adammiller.io"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anytree>=2.12.1",
    "click>=8.1.7",
    "flask>=3.0.3",
    "pypandoc>=1.14",
]

[project.urls]
Repository = "https://github.com/adammillerio/sch"

[project.optional-dependencies]
pandoc = [
    "pypandoc-binary>=1.14",
]
dev = [
    "pyre-check>=0.9.22",
    "ruff>=0.6.9",
]

[tool.uv]
dev-dependencies = [
    "pyre-check>=0.9.22",
    "ruff>=0.6.9",
]

[project.scripts]
sch = "sch.cli:sch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sch"]
